--- a/views/flight-results.ejs
+++ b/views/flight-results.ejs
@@ -32,7 +32,13 @@
     </nav>
     <main class="container">
       <h2>Flight Results</h2>
-      <div class="sort-buttons">
+      <div
+        style="
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        "
+      >
         <form action="/search-results" method="post">
           <input type="hidden" name="departure" value="<%= departure %>" />
           <input type="hidden" name="destination" value="<%= destination %>" />
@@ -53,6 +59,39 @@
             <i class="fas fa-sort-amount-up-alt"></i> Sort by Price Descending
           </button>
         </form>
+        <form action="/search-results" method="post">
+          <input type="hidden" name="departure" value="<%= departure %>" />
+          <input type="hidden" name="destination" value="<%= destination %>" />
+          <input type="hidden" name="date" value="<%= date %>" />
+          <input type="hidden" name="travelers" value="<%= travelers %>" />
+          <input type="hidden" name="sort" value="stopsAsc" />
+          <button type="submit" class="btn-small">
+            <i class="fas fa-sort-amount-down-alt"></i> Sort by Fewest Stops
+          </button>
+        </form>
+        <form action="/search-results" method="post">
+          <input type="hidden" name="departure" value="<%= departure %>" />
+          <input type="hidden" name="destination" value="<%= destination %>" />
+          <input type="hidden" name="date" value="<%= date %>" />
+          <input type="hidden" name="travelers" value="<%= travelers %>" />
+          <input type="hidden" name="sort" value="stopsDesc" />
+          <button type="submit" class="btn-small">
+            <i class="fas fa-sort-amount-up-alt"></i> Sort by Most Stops
+          </button>
+        </form>
+        <form action="/search-results" method="post">
+          <input type="hidden" name="departure" value="<%= departure %>" />
+          <input type="hidden" name="destination" value="<%= destination %>" />
+          <input type="hidden" name="date" value="<%= date %>" />
+          <input type="hidden" name="travelers" value="<%= travelers %>" />
+          <button type="submit" class="btn-small">Filter by Airline</button>
+
+          <select name="airlineFilter">
+            <option value="AirlineA">AirlineA</option>
+            <option value="AirlineB">AirlineB</option>
+            <option value="AirlineC">AirlineC</option>
+          </select>
+        </form>
       </div>
 
       <% if (flights.length > 0) { %>
@@ -65,12 +104,16 @@
               <strong>Destination:</strong> <%= flight.destination_airport %>
             </p>
             <p><strong>Date:</strong> <%= flight.departure_date %></p>
+            <p><strong>Airline:</strong> <%= flight.airline %></p>
+            <p>
+              <strong>Number of Stops:</strong> <%= flight.number_of_stops %>
+            </p>
             <p>
               <strong>Available Seats:</strong> <%= flight.available_seats %>
             </p>
             <p>
               <strong>Price:</strong> $<%= (flight.price * discount).toFixed(2)
-              %> <% if (coupon === 'VTSTUDENT') { %>
+              %> <% if (discount < 1) { %>
               <span class="original-price"
                 >$<%= flight.price.toFixed(2) %></span
               >
@@ -87,11 +130,23 @@
               <button type="submit" class="btn">Book Now</button>
             </form>
             <br />
-            <form
-              action="/save-favorite/<%= flight.destination_airport %>"
-              method="post"
-              class="inline-form"
-            >
+            <form action="/save-favorite" method="post">
+              <input
+                type="hidden"
+                name="departure"
+                value="<%= flight.departure_airport %>"
+              />
+              <input
+                type="hidden"
+                name="destination"
+                value="<%= flight.destination_airport %>"
+              />
+              <input
+                type="hidden"
+                name="date"
+                value="<%= flight.departure_date %>"
+              />
+              <input type="hidden" name="travelers" value="<%= travelers %>" />
               <button type="submit" class="btn-icon">
                 <i class="fas fa-heart"></i>
               </button>
