--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -51,11 +51,12 @@
 
     <main class="notification-container">
       <h2>Notifications</h2>
+
       <div class="notification-item">
-        Your flight to Paris has been confirmed!
+        Check out the new deals for flights to JFK!
       </div>
       <div class="notification-item">
-        Check out the new deals for flights to Tokyo!
+        Your can redeem your points to get couponss
       </div>
       <!-- Add more hardcoded notifications as needed -->
     </main>
